# TaiTan291.github.io

./: .gitignore  Cargo.toml  Trunk.toml  flake.nix  index.html  tailwind.config.js  uno.config.ts
.github/workflows/: deploy.yml  gh-pages.yml
public/: my_icon.avif
src/: app.rs  main.rs
src/components/: header.rs  mod.rs
src/components/element/: dropdown.rs  footer.rs  header.rs  item.rs  mod.rs  skills_card.rs  toc.rs  works_card.rs
src/components/layout/: section.rs
src/layouts/: layout.rs  main_layout.rs
src/pages/: favorite.rs  index.rs  mod.rs  not_found.rs
