[package]
name = "githubio"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"

# leptos(WASM)
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
wasm-bindgen = "0.2"

pulldown-cmark = "0.12"

web-sys = { version = "0.3", features = ["Window", "Storage"] }
[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
